# omni-medical-suite

./: .dockerignore  .env.api.example  .env.example  .env.web.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.lb  Dockerfile.redis  Dockerfile.ws  LICENSE  Makefile  PROPOSALS.md  README-Deployment.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.medical-infra.yml  docker-compose.yml  entrypoint.sh  init.sql  main_pipeline.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  turbo.json
app/: main.py  tasks.py
config/: grafana-datasources.yml  nginx.conf  pgadmin-servers.json  prometheus-rules.yml  prometheus.yml  qdrant.yaml  redis-sentinel.conf  tempo.yaml
data/: arabic_fixes.json  correction_dict.json  medical_dictionary.json  ortho_lexicon.json  translation_rules.json
desktop/: README.md  medical_doc_gui_v18.py
docs/: DEVELOPMENT_SUGGESTIONS.md  PROJECT_DOCUMENTATION.md  env-setup.md
grafana-dashboards/: omnimedical-dashboard.json
k8s/: 00-namespace.yml  01-postgres.yml  02-redis.yml  03-qdrant.yml  04-api-deployment.yml  05-celery-worker.yml  06-monitoring.yml  07-nginx-ingress.yml  08-configmaps.yml  09-secrets.yml  10-pvc.yml  11-upload-pv.yml  12-rbac.yml  README.md
legacy/: README.md  api_server.py
model/: trained-model.json
notebooks/: generate_training_data_colab.ipynb  ocr_ensemble_colab.ipynb  omnimedical_gradio_ui.py  omnimedical_v2_colab.ipynb
prisma/: schema.prisma
requirements/: api.txt  base.txt  dev.txt  ml.txt  optional.txt
scripts/: setup.sh
terraform/: README.md  (+4 more)
(+224 files in other folders)
