[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-medical-suite"
version = "1.0.0"
description = "Unified Medical Document Processing Platform — OCR + NLP + AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "DrAbdulmalek"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7.0", "surya-ocr>=0.4.0", "transformers>=4.36.0", "torch>=2.1.0"]
nlp = ["ar-corrector>=0.6.3", "arabic-reshaper>=3.0.0", "python-bidi>=0.4.2", "langdetect>=1.0.9"]
ai = ["openai>=1.0.0", "google-generativeai>=0.3.0"]
training = ["datasets>=2.15.0", "peft>=0.7.0", "accelerate>=0.25.0"]
export = ["openpyxl>=3.1.0", "python-docx>=0.8.11", "fpdf2>=2.7.0"]
all = [
    "easyocr>=1.7.0", "transformers>=4.36.0", "torch>=2.1.0",
    "ar-corrector>=0.6.3", "arabic-reshaper>=3.0.0", "python-bidi>=0.4.2",
    "openai>=1.0.0", "datasets>=2.15.0", "peft>=0.7.0",
    "openpyxl>=3.1.0", "python-docx>=0.8.11", "fpdf2>=2.7.0",
]
dev = ["pytest>=7.0.0", "pytest-cov>=4.1.0", "pytest-asyncio>=0.21.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "services*"]
